--- a/static/css/partials/shared/_utilities.scss
+++ b/static/css/partials/shared/_utilities.scss
@@ -20,10 +20,10 @@ $lilac: #8497C2;
 $message: #e9e9eb;
 
 // nameplate
-$discord: #7289da;
+$discord: #5865F2;
 $em: #666;
 $skype: #00AFF0;
-$gv: #34C6D8;
+$gv: #34a853;
 $cp: #ffdd40;
 $gh: #4183c4;
 $insta: #cd486b;
@@ -35,7 +35,7 @@ $peach: #F96B82;
 $snap: #FFFC00;
 $elle: #fdbf54;
 $reddit: #FC471E;
-$pin: #cb2027;
+$pin: #e60023;
 $da: #46574c;
 $plus: #dc4b39;
 $yt: #af2b26;
@@ -62,7 +62,6 @@ $ms: #039;
 $xanga: #4684c3;
 
 $music: #fa2d48;
-$discord: #8ea1e1;
 $im: #0d84ff;
 
 $ap: #7d50df;
